refactor(ai): fix SOLID/clean-code findings from architecture review
- Split InputGuard/OutputGuard into thin orchestrators over dedicated
  detector classes (guardrails/detect/), sharing SqlInjectionDetector
  between input and output paths instead of duplicating a weaker pattern.
- Add AbstractDomainAgent so the 5 domain agents (sales/inventory/
  purchasing/support/kb) share getDomain()/canHandle()/process() instead
  of duplicating them; fixes word-boundary keyword matching (e.g. "po"
  no longer matches inside unrelated words) and makes every agent honor
  window/record context per the IDomainAgent contract.
- Replace LangChain4jProviderFactory's triplicated provider switch
  statements with a single PROVIDER_REGISTRY lookup (fixes OCP
  violation: adding a provider now touches one place, not three).
- Make ThreadAwareChatMemory thread-safe (synchronized mutators,
  defensive copy from messages()).
- Remove dead LanguageDetectionService stub and dead agentCache field
  (documented why it can't safely be populated: per-request memory
  provider closure, not per-session).
- Fix AIService's streaming completion handler to stop persisting
  blocked/leaked output into chat memory once output guardrails reject
  it, and to signal the block to callers (OutputGuardrailBlockedException)
  instead of silently completing; already-streamed tokens can't be
  un-sent, so this only prevents the tainted response from being
  retained for future turns.
- Decompose chatStreamingWithContext from ~575 lines into a ~160-line
  orchestrator plus 7 focused private methods split by concern
  (pre-request guardrails, language detection, memory setup, context
  injection, token stream creation, completion handling).
- Implement RAGContextManager.getCompositeRetriever's TODO: merge
  session + global store results by score instead of only querying
  the session store.

Verified with a full mvn clean install -Pcloudempiere-local across all
modules after every batch of changes.

Co-Authore